# helix

./: Cargo.toml
helix-core/src/: uri.rs
helix-stdx/: Cargo.toml
helix-stdx/src/: env.rs  faccess.rs
helix-term/: Cargo.toml
helix-term/src/: application.rs  lib.rs
helix-term/tests/test/: helpers.rs
helix-tui/: Cargo.toml
helix-tui/src/: terminal.rs
helix-tui/src/backend/: alacritty.rs  mod.rs
helix-view/: Cargo.toml
helix-view/src/: graphics.rs  input.rs  keyboard.rs
my_editor/: Cargo.toml  test.py
my_editor/src/: main.rs
