[package]
name = "my_editor"
version = "0.1.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
helix-stdx = { path = "../helix-stdx" }
helix-core = { path = "../helix-core" }
helix-view = { path = "../helix-view" }
helix-term = { path = "../helix-term" }
helix-loader = { path = "../helix-loader" }
helix-lsp = { path = "../helix-lsp" }
helix-event = { path = "../helix-event" }
log = "0.4"
serde_json = "1"
anyhow = "1"
toml = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
arc-swap = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
tui = { path = "../helix-tui", package = "helix-tui", default-features = false, features = ["termina"] }
termina = { workspace = true, features = ["event-stream"] }
signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
tui = { path = "../helix-tui", package = "helix-tui", default-features = false }
